Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ClassCycle/ClassCycle2a.out
ClassCycle2b.java:6:1: compiler.err.cyclic.inheritance: ClassCycle2b
1 error
